# tap-tiktok-business

./: .gitignore  LICENSE.md  README.md  config.json.example  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml  tagged_release_workflow.yml
tap_tiktok_business/: auth.py  client.py  streams.py  tap.py
tap_tiktok_business/schemas/: accounts.schema.json  comments.schema.json  videos.schema.json
tap_tiktok_business/tests/: __init__.py  test_core.py
