[tool.poetry]
name = "tap-tiktok-business"
version = "0.0.1"
description = "`tap-tiktok-business` is a Singer tap for the Tiktok Business API, built with the Meltano SDK for Singer Taps."
authors = ["Hunter Kuffel"]
keywords = [
    "ELT",
    "tap-tiktok-business",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.4.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^22.3.0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_tiktok_business"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-tiktok-business = 'tap_tiktok_business.tap:TapTiktokBusiness.cli'
